@@ -12,6 +12,8 @@ Version 2.0-2 (opened October 20, 2011)
 	* merge r1961: consinstent 'noshrink' defaults in metaMDSdist()
 	and metaMDS(..., engine="isoMDS")
 	* merge r1959: capscale zero-rank constraints bug fix.
+	* merge r1988 by hand: calling f.test without transposed matrix
+	bug in adonis.
 
 Version 2.0-1 (released October 20, 2011)
 
